style.css
h1 {
  color: #a39161;
}

.navy-bg {
  background-color: #192c4e;
}

.input-bg {
  background-color: #f6f6f6 !important;
}

.checkbox-menu {
  background-color: rgb(243, 243, 243) !important;
}

.checkbox-menu li label {
  display: block;
  padding: 3px 10px;
  clear: both;
  font-weight: normal;
  line-height: 1.42857143;
  color: #333;
  white-space: nowrap;
  margin:0;
  transition: background-color .4s ease;
}
.checkbox-menu li input {
  margin: 5px;
  margin-right: 12px;
  top: 2px;
  position: relative;
  transform: scale(1.4);
}

.checkbox-menu li.active label {
  background-color: #cbcbff;
  font-weight:bold;
}

.checkbox-menu li label:hover,
.checkbox-menu li label:focus {
  background-color: #f5f5f5;
}

.checkbox-menu li.active label:hover,
.checkbox-menu li.active label:focus {
  background-color: #b8b8ff;
}

